--- a/MODULO_2_UNIDAD_4/prueba_bootstrap.css
+++ b/MODULO_2_UNIDAD_4/prueba_bootstrap.css
@@ -25,3 +25,7 @@ h3 {
     -webkit-box-shadow: -1px 4px 10px 10px rgba(255, 204, 1, 0.5);
     -moz-box-shadow: -1px 4px 10px 10px rgba(255, 204, 1, 0.5);
 }
+
+#container {
+    width: 100%;
+}
