--- a/scm_page/backend/views/admin/login.hbs
+++ b/scm_page/backend/views/admin/login.hbs
@@ -3,13 +3,13 @@
         <form action="/admin/login" method="post">
             <div class="mb-3 row">
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="inputUser" placholder="User" name="user">
+                    <input type="text" class="form-control" id="inputUser" placholder="User" name="user_name">
                 </div>
             </div>
             <div class="mb-3 row">
                 <div class="col-sm-10">
                     <input type="password" class="form-control" id="inputPassword" placeholder="Password"
-                        name="password">
+                        name="user_password">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Ingresar</button>
